--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,8 +8,8 @@ on:
       - 'example/build.gradle.kts'
       - 'gradle/libs.versions.toml'
       - 'plugin-build/*.gradle.kts'
-      - 'plugin-build/jcef/src/**'
-      - 'plugin-build/jcef/*.gradle.kts'
+      - 'plugin-build/jcef-gradle-plugin/src/**'
+      - 'plugin-build/jcef-gradle-plugin/*.gradle.kts'
       - '*.gradle.kts'
   pull_request:
     branches: [ "main" ]
@@ -19,8 +19,8 @@ on:
       - 'example/build.gradle.kts'
       - 'gradle/libs.versions.toml'
       - 'plugin-build/*.gradle.kts'
-      - 'plugin-build/jcef/src/**'
-      - 'plugin-build/jcef/*.gradle.kts'
+      - 'plugin-build/jcef-gradle-plugin/src/**'
+      - 'plugin-build/jcef-gradle-plugin/*.gradle.kts'
       - '*.gradle.kts'
 
 env:
@@ -49,12 +49,12 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          ./gradlew :plugin-build:jcef:test :plugin-build:jcef:jacocoTestReport
+          ./gradlew :plugin-build:jcef-gradle-plugin:test :plugin-build:jcef-gradle-plugin:jacocoTestReport
       - name: Generate JaCoCo Badge
         uses: cicirello/jacoco-badge-generator@v2
         with:
           generate-branches-badge: true
-          jacoco-csv-file: plugin-build/jcef/build/reports/jacoco/test/jacocoTestReport.csv
+          jacoco-csv-file: plugin-build/jcef-gradle-plugin/build/reports/jacoco/test/jacocoTestReport.csv
       - name: Update badges (if changed)
         run: |
           if [[ `git status --porcelain` ]]; then
