--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
 springBoot = "3.5.3"
-jcef       = "0.6.9"
+springJcef = "0.6.10"
 
 [plugins]
 kotlin = { id = "org.jetbrains.kotlin.jvm",  version = "2.2.0" }
@@ -8,5 +8,5 @@ kotlin = { id = "org.jetbrains.kotlin.jvm",  version = "2.2.0" }
 [libraries]
 plugin-dependencyManagement = { module = "io.spring.dependency-management:io.spring.dependency-management.gradle.plugin", version     = "1.1.7"      }
 plugin-springBoot           = { module = "org.springframework.boot:spring-boot-gradle-plugin",                            version.ref = "springBoot" }
-springJCEF                  = { module = "io.github.bitfist:jcef-spring-boot-starter",                                    version.ref = "jcef"       }
+springJcef                  = { module = "io.github.bitfist:jcef-spring-boot-starter",                                    version.ref = "springJcef" }
 test-junit5Bom              = { module = "org.junit:junit-bom",                                                           version     = "5.13.3"     }
